--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,11 @@ jobs:
             sbt -v scalafmtSbtCheck scalafmtCheckAll "+ test"
             ;;
           3)
-            sbt -v scalafmtSbtCheck scalafmtCheckAll '++ 3.0.0-RC1!' json4s-ast/test
+            sbt -v \
+            '++ 3.0.0-RC2-bin-20210310-4af1386-NIGHTLY!' \
+            scalafmtSbtCheck \
+            scalafmtCheckAll \
+            "Test/compile"
             ;;
           *)
             echo "unknown scala version"
