--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
             sbt -v scalafmtSbtCheck "+ scalafmtCheckAll" "+ test"
             ;;
           3)
-            sbt -v scalafmtSbtCheck '++ 3.0.0-RC1!' scalafmtCheckAll json4s-ast/test
+            sbt -v scalafmtSbtCheck '++ 3.0.0-RC1!' scalafmtCheckAll json4s-astJVM/test
             ;;
           *)
             echo "unknown scala version"
