--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,8 @@ jobs:
             sbt -v "+ test"
             ;;
           3)
-            sbt -v '++ 3.0.0-RC1!' json4s-ast/test
+            sbt -v '++ 3.0.0-RC1!' \
+            "all json4s-ast/test json4s-scalap/test"
             ;;
           *)
             echo "unknown scala version"
